--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,20 @@ asgiref==3.2.3
 # astroid==2.3.3
 autopep8==1.4.4
 bcrypt==3.1.7
+boto3==1.10.44
+botocore==1.13.44
 certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
 colorama==0.4.3
-Django==2.2.8
+Django==2.2
+django-storages==1.8
+docutils==0.15.2
 geolocation-python==0.2.2
 idna==2.8
 isort==4.3.21
 Jinja2==2.10.3
+jmespath==0.9.4
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
@@ -20,8 +25,10 @@ pycparser==2.19
 pylint==2.4.4
 pylint-django==2.0.13
 pylint-plugin-utils==0.6
+python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
+s3transfer==0.2.1
 six==1.13.0
 sqlparse==0.3.0
 timeago==1.0.10
