--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,58 @@
 asgiref==3.2.3
 # astroid==2.3.3
 autopep8==1.4.4
+aws-xray-sdk==0.95
 bcrypt==3.1.7
-boto3==1.10.44
-botocore==1.13.44
+boto==2.49.0
+boto3==1.7.84
+botocore==1.10.84
 certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
 colorama==0.4.3
+cookies==2.2.1
+cryptography==2.8
 Django==2.2
-django-storages==1.8
+django-s3-storage==0.13.0
+docker==4.1.0
 docutils==0.15.2
+ecdsa==0.14.1
+future==0.18.2
 geolocation-python==0.2.2
 idna==2.8
 isort==4.3.21
 Jinja2==2.10.3
 jmespath==0.9.4
+jsondiff==1.1.1
+jsonpickle==1.2
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
+mock==3.0.5
+moto==1.3.6
 Pillow==6.2.1
+pyaml==19.12.0
 pycodestyle==2.5.0
 pycparser==2.19
+pycryptodome==3.9.4
 pylint==2.4.4
 pylint-django==2.0.13
 pylint-plugin-utils==0.6
+pypiwin32==223
 python-dateutil==2.8.1
+python-jose==2.0.2
 pytz==2019.3
+pywin32==227
+PyYAML==5.2
 requests==2.22.0
-s3transfer==0.2.1
+responses==0.10.9
+s3transfer==0.1.13
 six==1.13.0
 sqlparse==0.3.0
 timeago==1.0.10
 typed-ast==1.4.0
 urllib3==1.25.7
+websocket-client==0.57.0
+Werkzeug==0.16.0
 wrapt==1.11.2
+xmltodict==0.12.0
