--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,15 @@ asgiref==3.2.3
 # astroid==2.3.3
 autopep8==1.4.4
 aws-xray-sdk==0.95
+awscli==1.16.309
 bcrypt==3.1.7
 boto==2.49.0
 boto3==1.7.84
-botocore==1.10.84
+botocore==1.13.45
 certifi==2019.11.28
 cffi==1.13.2
 chardet==3.0.4
-colorama==0.4.3
+colorama==0.4.1
 cookies==2.2.1
 cryptography==2.8
 Django==2.2
@@ -32,6 +33,7 @@ mock==3.0.5
 moto==1.3.6
 Pillow==6.2.1
 pyaml==19.12.0
+pyasn1==0.4.8
 pycodestyle==2.5.0
 pycparser==2.19
 pycryptodome==3.9.4
@@ -46,7 +48,8 @@ pywin32==227
 PyYAML==5.2
 requests==2.22.0
 responses==0.10.9
-s3transfer==0.1.13
+rsa==3.4.2
+s3transfer==0.2.1
 six==1.13.0
 sqlparse==0.3.0
 timeago==1.0.10
