--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,7 @@ pypiwin32==223
 python-dateutil==2.8.1
 python-jose==2.0.2
 pytz==2019.3
-pywin32==227
+# pywin32==227
 PyYAML==5.2
 requests==2.22.0
 responses==0.10.9
